update template w4