@@ -13,21 +13,14 @@ class Cell {
  * using a linked list of Cell objects, each one storing one String value,
  * and a link to next cell.
  */
-class MyLinkedList {
+public class MyLinkedList {
 
     //TODO!
 
     /**
-     * Returns true if list is empty, false otherwise
-     */
-    boolean isEmpty() {
-        return false;
-    }
-
-    /**
      * Get the size of the list (number of elements it contains)
      */
-    int size() {
+    public int size() {
         return -1;
     }
 
@@ -35,7 +28,7 @@ class MyLinkedList {
      * Return the element at the specified index
      * (or null if index is invalid)
      */
-    String get(int index) {
+    public String get(int index) {
         return null;
     }
 
@@ -43,14 +36,7 @@ class MyLinkedList {
      * Update the element at a specified index
      * (does nothing if index is invalid)
      */
-    void set(int index, String newValue) {
-
-    }
-
-    /**
-     * Add a new value at the FRONT of the list (before the current head)
-     */
-    void addBefore(String newValue) {
+    public void set(int index, String newValue) {
 
     }
 
@@ -59,16 +45,8 @@ class MyLinkedList {
      * shifting all elements after it with one position up.
      * (does nothing if index is invalid)
      */
-    void insert(int index, String newValue) {
+    public void insert(int index, String newValue) {
 
-    }
-
-    /**
-     * Remove the first element (head), also returning its value.
-     * (does nothing and returns null if list is empty)
-     */
-    String removeFirst() {
-        return null;
     }
 
     /**
@@ -76,7 +54,7 @@ class MyLinkedList {
      * shifting all elements after it with one position down.
      * (does nothing if index is invalid)
      */
-    String remove(int index) {
+    public String remove(int index) {
         return null;
     }
 
@@ -84,16 +62,8 @@ class MyLinkedList {
      * Searches for the given value in the list, and returns the index
      * of its first apparition (or -1 if not found)
      */
-    int indexOf(String valueToFind) {
+    public int indexOf(String valueToFind) {
         return -1;
-    }
-
-    /**
-     * Searches for the given value in the list and returns true if found,
-     * false if not found.
-     */
-    boolean contains(String valueToFind) {
-        return false;
     }
 
     /**
@@ -113,47 +83,43 @@ class MyLinkedList {
 
         MyLinkedList list = new MyLinkedList();
         System.out.println("\nBefore any action: " + list); //[]
-        System.out.println("size: " + list.size() + ", isEmpty: " + list.isEmpty());
+        System.out.println("size: " + list.size());
 
-        list.addBefore("dd");
-        list.addBefore("cc");
-        list.addBefore("bb");
-        list.addBefore("aa");
+        list.insert(0, "aa");
+        list.insert(1, "bb");
+        list.insert(2, "cc");
+        list.insert(3, "dd");
         System.out.println("\nAfter adding 4 elements: " + list); //[aa, bb, cc, dd]
-        System.out.println("size: " + list.size() + ", isEmpty: " + list.isEmpty());
+        System.out.println("size: " + list.size());
 
         System.out.println("\nindexOf(aa): " + list.indexOf("aa")); //0
         System.out.println("indexOf(cc): " + list.indexOf("cc")); //2
         System.out.println("indexOf(xx): " + list.indexOf("xx")); //-1
-        System.out.println("contains(cc): " + list.contains("cc")); //true
-        System.out.println("contains(xx): " + list.contains("xx")); //false
 
         System.out.println("\nget(2): " + list.get(2)); //cc
         System.out.println("get(5): " + list.get(5)); //null
 
 
-        list.insert(0, "ee"); //[ee, bb, cc, dd]
-        System.out.println("\nAfter inserting 'ee' at index 0: " + list);
-        list.insert(3, "ff"); //[ee, bb, cc, ff, dd]
-        System.out.println("After inserting 'ff' at index 3: " + list);
-        System.out.println("size: " + list.size());
+        list.insert(0, "ee");
+        System.out.println("\nAfter inserting 'ee' at index 0: " + list); //[ee, aa, bb, cc, dd]
+        list.insert(3, "ff");
+        System.out.println("After inserting 'ff' at index 4: " + list); //[ee, aa, bb, ff, cc, dd]
+        System.out.println("size: " + list.size()); //6
 
 
         list.set(5, "DD!");
-        System.out.println("\nAfter update(5, 'DD!'): " + list);
+        System.out.println("\nAfter update(5, 'DD!'): " + list); //[ee, aa, bb, ff, cc, DD!]
         list.set(10, "ZZ");
-        System.out.println("After update(10, 'ZZ'): " + list);
+        System.out.println("After update(10, 'ZZ'): " + list); //[ee, aa, bb, ff, cc, DD!]
 
 
-        String removed = list.removeFirst();
-        System.out.println("\nAfter removing first elem (" + removed + "): " + list);
+        String removed = list.remove(1);
+        list.remove(0);
+        System.out.println("\nAfter removing elem at index 0,1 (" + removed + "): " + list); //[bb, ff, cc, DD!]
 
-        removed = list.remove(0); //[bb, cc, ff, dd]
-        System.out.println("\nAfter removing elem at index 0 (" + removed + "): " + list);
+        removed = list.remove(3);
+        System.out.println("After removing elem at index 3 (" + removed + "): " + list); //[bb, ff, cc]
 
-        removed = list.remove(3); //[bb, cc, ff]
-        System.out.println("After removing elem at index 3 (" + removed + "): " + list);
-
-        System.out.println("size: " + list.size());
+        System.out.println("size: " + list.size());//3
     }
 }
